// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controller it changes the away setpoint for dualsetpoint controllers 1`] = `
Object {
  "data": Object {
    "changeControllerAwaySetpoint": Object {
      "__typename": "ChangeControllerAwaySetpointSuccess",
      "controller": Object {
        "away": Object {
          "active": false,
          "setpoint": Object {
            "__typename": "DualSetpoint",
            "lower": Object {
              "max": 31.1111,
              "min": 10,
              "step": 0.5555,
              "value": 11.1111,
            },
            "minInterval": 1.1111,
            "upper": Object {
              "max": 32.2222,
              "min": 11.1111,
              "step": 0.5555,
              "value": 26.1111,
            },
          },
        },
        "id": "b06d8593-997a-44a1-ad23-2cf19e5ad071",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`controller it returns the correct fields for Away 1`] = `
Object {
  "data": Object {
    "controller": Object {
      "away": Object {
        "active": false,
        "setpoint": Object {
          "__typename": "DualSetpoint",
          "lower": Object {
            "max": 31.1111,
            "min": 10,
            "step": 0.5555,
            "value": 10,
          },
          "minInterval": 1.1111,
          "upper": Object {
            "max": 32.2222,
            "min": 11.1111,
            "step": 0.5555,
            "value": 21.1111,
          },
        },
      },
      "id": "b06d8593-997a-44a1-ad23-2cf19e5ad071",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`controller it sets away active, and updates the setpoint 1`] = `
Object {
  "data": Object {
    "toggleControllerAway": Object {
      "__typename": "ToggleControllerAwaySuccess",
      "controller": Object {
        "away": Object {
          "active": true,
          "setpoint": Object {
            "__typename": "DualSetpoint",
            "lower": Object {
              "max": 31.1111,
              "min": 10,
              "step": 0.5555,
              "value": 10,
            },
            "minInterval": 1.1111,
            "upper": Object {
              "max": 32.2222,
              "min": 11.1111,
              "step": 0.5555,
              "value": 21.1111,
            },
          },
        },
        "id": "b06d8593-997a-44a1-ad23-2cf19e5ad071",
        "setpoint": Object {
          "__typename": "DualSetpoint",
          "lower": Object {
            "max": 31.1111,
            "min": 10,
            "step": 0.5555,
            "value": 10,
          },
          "minInterval": 1.1111,
          "upper": Object {
            "max": 32.2222,
            "min": 11.1111,
            "step": 0.5555,
            "value": 21.1111,
          },
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`location it sets away active for all controllers 1`] = `
Object {
  "data": Object {
    "toggleLocationAway": Object {
      "__typename": "ToggleLocationAwaySuccess",
      "location": Object {
        "away": Object {
          "active": true,
        },
        "controllers": Array [
          Object {
            "away": Object {
              "active": true,
            },
          },
          Object {
            "away": Object {
              "active": true,
            },
          },
        ],
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
